xvtlas_output/5_13b_objdec/make.log
make: Entering directory '/home/user/ebpf-tests-3-1/XDPs/xdp_synproxy'
clang -O2 -g -Wall -target bpf -I. -I../tools -I.. -I/usr/include/bpf -I/usr/include/x86_64-linux-gnu/linux -D__TARGET_ARCH_x86 -c xdp_synproxy_kern.c -o xdp_synproxy_kern.bpf.o
xdp_synproxy_kern.c:195:6: error: conflicting types for 'process_port'
  195 | int *process_port(int *port) {
      |      ^
xdp_synproxy_kern.c:194:12: note: previous declaration is here
  194 | extern int process_port(int port);
      |            ^
xdp_synproxy_kern.c:221:16: warning: comparison of distinct pointer types ('__u8 *' (aka 'unsigned char *') and 'void *') [-Wcompare-distinct-pointer-types]
  221 |         if (data + sz >= ctx->data_end)
      |             ~~~~~~~~~ ^  ~~~~~~~~~~~~~
xdp_synproxy_kern.c:390:19: warning: comparison of distinct pointer types ('struct ethhdr *' and 'void *') [-Wcompare-distinct-pointer-types]
  390 |         if (hdr->eth + 1 > data_end)
      |             ~~~~~~~~~~~~ ^ ~~~~~~~~
xdp_synproxy_kern.c:395:31: error: incompatible pointer to integer conversion passing 'int *' to parameter of type 'int'; remove & [-Wint-conversion]
  395 |         int *new_port = process_port(&port);
      |                                      ^~~~~
xdp_synproxy_kern.c:194:29: note: passing argument to parameter 'port' here
  194 | extern int process_port(int port);
      |                             ^
xdp_synproxy_kern.c:395:7: error: incompatible integer to pointer conversion initializing 'int *' with an expression of type 'int' [-Wint-conversion]
  395 |         int *new_port = process_port(&port);
      |              ^          ~~~~~~~~~~~~~~~~~~~
xdp_synproxy_kern.c:403:21: warning: comparison of distinct pointer types ('struct iphdr *' and 'void *') [-Wcompare-distinct-pointer-types]
  403 |                 if (hdr->ipv4 + 1 > data_end)
      |                     ~~~~~~~~~~~~~ ^ ~~~~~~~~
xdp_synproxy_kern.c:419:21: warning: comparison of distinct pointer types ('struct ipv6hdr *' and 'void *') [-Wcompare-distinct-pointer-types]
  419 |                 if (hdr->ipv6 + 1 > data_end)
      |                     ~~~~~~~~~~~~~ ^ ~~~~~~~~
xdp_synproxy_kern.c:437:19: warning: comparison of distinct pointer types ('struct tcphdr *' and 'void *') [-Wcompare-distinct-pointer-types]
  437 |         if (hdr->tcp + 1 > data_end)
      |             ~~~~~~~~~~~~ ^ ~~~~~~~~
5 warnings and 3 errors generated.
make: *** [Makefile:49: xdp_synproxy_kern.bpf.o] Error 1
make: Leaving directory '/home/user/ebpf-tests-3-1/XDPs/xdp_synproxy'
